--- a/src/blocks/popup-form/__input/popup-form__input.css
+++ b/src/blocks/popup-form/__input/popup-form__input.css
@@ -1,4 +1,4 @@
-.form__input {
+.popup-form__input {
   padding: 0 0 9px 6px;
   border: none;
   font-size: 14px;
@@ -7,7 +7,7 @@
   transition: all 0.2s linear;
 }
 
-.form__input:focus {
+.popup-form__input:focus {
   outline-style: none;
   border-radius: 10px 37px 0px;
   outline-width: 2px;
