--- a/src/blocks/popup-form/__submit-button/popup-form__submit-button.css
+++ b/src/blocks/popup-form/__submit-button/popup-form__submit-button.css
@@ -1,4 +1,4 @@
-.form__submit-button {
+.popup-form__submit-button {
   background-color: #000000;
   border: none;
   color: #FFFFFF;
@@ -11,12 +11,12 @@
   border-radius: 2px;
 }
 
-.form__submit-button:hover {
+.popup-form__submit-button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 700px) {
-  .form__submit-button {
+  .popup-form__submit-button {
     width: 238px;
     font-size: 14px;
     line-height: 17px;
