--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,5 +1,8 @@
 .popup__container {
   position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
